# opex

./: .deploy.env.example  .env.example  .gitignore  .markdownlint.json  .tmp_abort_test.py  .tmp_q.py  .tmp_smoke.py  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  Cargo.toml  Makefile  README.en.md  README.md  README.ru.md  SECURITY.md  SECURITY.ru.md  release.sh  rust-toolchain.toml  setup.sh  smoke-state.yml  test-pi-concurrency.py  test-pi-cron-pipeline.py  test-pi-e2e.py  test-pi-trace-correlation.py  uninstall.sh  update.sh
crates/hydeclaw-core/: Cargo.toml
crates/hydeclaw-core/scaffold/base/: HEARTBEAT.md  MEMORY.md  SOUL.md  agent.toml
crates/hydeclaw-core/scaffold/regular/: SOUL.md  agent.toml
crates/hydeclaw-core/src/: lib.rs  main.rs  metrics.rs  redact.rs  secrets.rs  trace_propagation.rs  uploads.rs
crates/hydeclaw-core/src/agent/: agent_config.rs  agent_state.rs  approval_manager.rs  cli_backend.rs  compressor.rs  context_builder.rs  engine_dispatch.rs  engine_event_sender.rs  error_classify.rs  history.rs  hooks.rs  json_repair.rs  knowledge_extractor.rs  memory_service.rs  mod.rs  model_discovery.rs  path_guard.rs  providers.rs  providers_anthropic.rs  providers_google.rs  providers_http.rs  providers_openai.rs  request_context.rs  session_agent_pool.rs  session_manager.rs  stream_event.rs  thinking.rs  tool_executor.rs  tool_loop.rs  tool_registry.rs  url_tools.rs  workspace.rs
crates/hydeclaw-core/src/channels/: access.rs
crates/hydeclaw-core/src/config/: mod.rs  validation.rs
crates/hydeclaw-core/src/containers/: mod.rs  sandbox.rs
crates/hydeclaw-core/src/curator/: mod.rs  (+3 more)
crates/hydeclaw-core/tests/: integration_approval_id.rs  integration_approval_race.rs  integration_approval_security.rs  integration_backup_size_cap.rs  integration_curator_config.rs  integration_dashboard_metrics.rs  integration_data_layer_approval.rs  integration_fse_affordance.rs  integration_fse_regression.rs  integration_fse_security.rs  integration_google_auth_routes.rs  integration_iteration_id_wire.rs  integration_message_id.rs  integration_parallel_batch_id.rs  integration_path_canonicalize.rs  integration_providers_no_reload.rs  integration_session_chain.rs  integration_session_cleanup.rs  integration_session_events_cleanup.rs  integration_session_mirroring.rs  integration_session_run_status.rs  integration_session_timeline_cleanup.rs  integration_sse_coalescing.rs  integration_ssrf_guard.rs  integration_stuck_sessions_window_fn.rs  integration_tool_call_id.rs  integration_upload_hmac.rs  integration_upload_migration.rs  integration_uploads_db.rs  integration_watchdog_agent_activity.rs  integration_webhook_inbound.rs  test_compression_chains.rs  test_extended_token_usage.rs  test_pg_trgm_search.rs  test_search_hybrid_rrf.rs  unit_build_tools_json.rs  unit_format_session_as_markdown.rs
crates/hydeclaw-db/: Cargo.toml
crates/hydeclaw-db/src/: approvals.rs  lib.rs  memory_queries.rs  notifications.rs  reentry_mode.rs  session_failures.rs  session_status.rs  session_timeline.rs  session_wal.rs  sessions.rs  sys_flags.rs  usage.rs
crates/hydeclaw-embedding/: Cargo.toml
crates/hydeclaw-embedding/src/: client.rs  lib.rs  retry.rs  trace.rs
crates/hydeclaw-embedding/tests/: embed.rs  health.rs  probe.rs
crates/hydeclaw-gateway-util/: Cargo.toml
crates/hydeclaw-gateway-util/src/: lib.rs  rate_limiter.rs  restore_stream_core.rs  trace_context.rs
crates/hydeclaw-memory-worker/: Cargo.toml
crates/hydeclaw-memory-worker/src/: main.rs  otel_init.rs
crates/hydeclaw-types/: Cargo.toml
crates/hydeclaw-types/src/: channels.rs  ids.rs  lib.rs  sse.rs
crates/hydeclaw-types/tests/: channels_wire.rs  sse_wire.rs
crates/opex-catalog/: Cargo.toml
crates/opex-catalog/src/: aliases.rs  lib.rs  models_dev.rs  service.rs
crates/opex-core/: Cargo.toml
crates/opex-core/src/: lib.rs  main.rs  metrics.rs  oauth.rs  redact.rs  secrets.rs  shutdown.rs  trace_propagation.rs  uploads.rs
crates/opex-core/tests/: integration_aborted_usage.rs  integration_approval_id.rs  integration_approval_race.rs  integration_approval_security.rs  integration_backup_size_cap.rs  integration_batch_insert_chunking.rs  integration_cardinality_guard.rs  integration_csp_report.rs  integration_curator_config.rs  integration_dashboard_metrics.rs  integration_data_layer_approval.rs  integration_data_layer_indexes.rs  integration_fse_affordance.rs  integration_fse_regression.rs  integration_fse_security.rs  integration_gateway_no_leak.rs  integration_infra_decisions.rs  integration_iteration_id_wire.rs  integration_message_id.rs  integration_mock_provider.rs  integration_otel_export.rs  integration_parallel_batch_id.rs  integration_partial_chain.rs  integration_path_canonicalize.rs  integration_phase6_no_video_refs.rs  integration_rate_limiter_sweeper.rs  integration_request_limiter_bearer_exempt.rs  integration_session_chain.rs  integration_session_cleanup.rs  integration_session_mirroring.rs  integration_session_run_status.rs  integration_session_timeline_cleanup.rs  integration_shutdown_drain.rs  integration_shutdown_reproducer.rs  integration_smoke.rs  integration_sse_coalescing.rs  integration_sse_lifecycle.rs  integration_ssrf_guard.rs  integration_streaming_parent_link.rs  integration_stuck_sessions_window_fn.rs  (+12 more)
crates/opex-embedding/: Cargo.toml
crates/opex-embedding/src/: client.rs  lib.rs  retry.rs  trace.rs
crates/opex-embedding/tests/: embed.rs  health.rs  probe.rs
crates/opex-gateway-util/: Cargo.toml
crates/opex-gateway-util/src/: config_path.rs  env.rs  lib.rs  rate_limiter.rs  restore_stream_core.rs  trace_context.rs
crates/opex-memory-worker/: Cargo.toml
crates/opex-memory-worker/src/: config.rs  main.rs  otel_init.rs  tasks.rs
crates/opex-memory-worker/tests/: integration_memory_worker_notify.rs
crates/opex-watchdog/: Cargo.toml
crates/opex-watchdog/src/: alerter.rs  checker.rs  config.rs  inactivity.rs  infra_jobs.rs  infra_watch.rs  lib.rs  main.rs  proc.rs  recovery.rs  resources.rs  status.rs
crates/opex-watchdog/tests/: integration_inactivity.rs
(+1791 files in other folders)
