[package]
name = "hydeclaw-db"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx       = { workspace = true }
uuid       = { workspace = true }
anyhow     = { workspace = true }
chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }

[features]
ts-gen = []
