[package]
name = "hydeclaw-db"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx       = { workspace = true }
uuid       = { workspace = true }
anyhow     = { workspace = true }
chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }

# TypeScript codegen (optional, behind `ts-gen` feature)
ts-rs = { version = "12", optional = true, features = ["chrono-impl", "serde-json-impl", "uuid-impl"] }

[features]
ts-gen = ["dep:ts-rs"]
