[package]
name = "hydeclaw-embedding"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# Workspace-declared deps — наследуем все features из workspace ([workspace.dependencies]).
# Не передаём свои features чтобы не конфликтовать с workspace-overrides reqwest
# (rustls-tls, http2, etc.). Workspace набор шире чем нужно, но безопасен.
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
