[package]
name = "hydeclaw-gateway-util"
version.workspace = true
edition.workspace = true

[features]
ts-gen = []

[dependencies]
axum         = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
serde_json   = { workspace = true }
futures-util = "0.3"
struson      = { version = "0.6", features = ["serde"] }
