[package]
name = "hydeclaw-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ts-rs = { version = "12", features = ["chrono-impl", "uuid-impl", "serde-json-impl"], optional = true }
sqlx = { workspace = true, optional = true }

[features]
ts-gen = ["dep:ts-rs"]
sqlx = ["dep:sqlx"]
