[package]
name = "opex-catalog"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# Workspace-declared deps — inherit features from [workspace.dependencies].
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
