[package]
name = "opex-gateway-util"
version.workspace = true
edition.workspace = true

[features]
ts-gen = []

[dependencies]
axum         = { workspace = true }
dashmap      = "6"
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
serde_json   = { workspace = true }
futures-util = { workspace = true }
struson      = { workspace = true }
